--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Lets-Talk</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="nav_header_title">Android Studio</string>
+    <string name="nav_header_title">Lets Talk</string>
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
@@ -155,5 +155,10 @@
     <string name="change_password">Change Password</string>
     <string name="logout">Logout</string>
     <string name="home">Home</string>
+    <string name="homeMenu">Home</string>
+    <string name="messages">Messages</string>
+    <string name="explore">Explore</string>
+    <string name="settings">Settings</string>
+    <string name="messages_fragment">Messages Fragment</string>
 
 </resources>
